# high-speed-camera-testing

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ANALYSIS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  EXPOSURE_CONTROLS.md  IMPLEMENTATION_COMPLETE.md  README.md  SDK_REFERENCE.md  TROUBLESHOOTING.md  baseline_dependencies.txt  baseline_metrics.txt  baseline_tests.txt  debug_camera.py  deploy.sh  docker-compose.usb.yml  docker-compose.yml  download_models.py  fix_camera_ip.py  main.py  opencode.json  pyproject.toml  ruff.toml  run.sh  test_camera_capture.py  test_face_recognition.py  test_model_quick.py  test_segmentation.py
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
.opencode/command/: speckit.plan.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
.specify/templates/: plan-template.md
Camera/Data/: 055010923001.mvdat
Camera/log/: error_20251006-120344.55458  error_20251006-120512.59411  error_20251006-123302.15719  error_20251006-124245.35037  error_20251006-124329.36448  error_20251006-124427.38628  error_20251006-124710.44134  error_20251008-135504.76935  error_20251008-163233.51573  error_20251008-164352.57084  error_20251008-164355.57084  error_20251008-164359.57084  error_20251008-164402.57084  error_20251008-165037.61086  error_20251009-095000.32040  (+34 more)
desktop/: README.md  electron-builder.yml  main.js  package-lock.json  package.json  splash.html
scripts/: healthcheck.py
spec/: SDK_API_CHS.chm  llm.txt  manual.txt
src/lib/: mvsdk.py
(+104 files in other folders)
