[project]
name = "high-speed-camera-testing"
version = "0.1.0"
description = "Camera feed display using Gradio and MVSDK"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[tool.ty.environment]
python = ".venv/bin/python"
python-version = "3.13"
python-platform = "Darwin"

[tool.ty.src]
exclude = [
    "src/lib/mvsdk.py",
    "spec"
]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-reference = "ignore"
unresolved-attribute = "ignore"
call-non-callable = "ignore"
possibly-missing-attribute = "warn"
